1. 优化页面布局，全屏显示后 容器位置错位 2. 优化裁剪框的显示逻辑 3. 优化视频裁剪 先裁剪后转码， 转换30fps ， 指定比特率 4. 增加视频保存按钮 5. 优化UI排版

--- a/public/styles.css
+++ b/public/styles.css
@@ -64,15 +64,13 @@ button, input[type="file"] {
 
 .upload-btn {
     display: inline-block;
-    margin: 20px;
     font-size: 14px;
-    padding: 8px;
     border: 1px solid #ccc;
     border-radius: 5px;
     cursor: pointer;
     text-align: center;
     justify-content: center; /* 水平居中 */
-    align-items: center;     /* 垂直居中 */
+    pointer-events: none;
 }
 
 button:hover {
@@ -196,14 +194,12 @@ progress::-moz-progress-bar {
 
 .video-player {
     display: inline;
+    max-width: 100%;
+    height: auto;
+    
 }
 
 .progress_text{
     display: flex;
     justify-content: flex-start;
-}
-
-.crop-container{
-    display: inline;
-    padding-right: 1px;
 }
